--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-hello
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Большая желтая кнопка</title>
+    <style>
+        .yellow-button {
+            display: inline-block; /* Позволяет задать ширину и высоту */
+            padding: 15px 30px; /* Поля вокруг текста */
+            background-color: yellow; /* Цвет фона */
+            color: black; /* Цвет текста */
+            text-align: center; /* Центрировать текст */
+            font-size: 20px; /* Размер шрифта */
+            text-decoration: none; /* Убирает подчеркивание */
+            border: none; /* Убираем границу */
+            border-radius: 35px; /* Закругляем углы */
+            transition: background-color 0.3s; /* Плавный переход цвета фона */
+            font-family: sans-serif;
+            margin-top: 115px;
+        }
+        .a {
+            padding-top: 40px;
+        }
+
+        .yellow-button:hover {
+            background-color: #F5E027; /* Изменение цвета фона при наведении */
+        }
+    </style>
+</head>
+<body>
+
+    <a href="tinkoffinvesting://www.tbank.ru/invest/projects?projectId=guild" class="yellow-button">Special</a>
+    <br>
+
+</body>
+</html>
