--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-    <a href="tinkoffinvesting://www.tbank.ru/invest/projects?projectId=guild" class="yellow-button">Special</a>
+    <a href="tinkoffinvesting://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Special</a>
     <br>
 
 </body>
