--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 </head>
 <body>
 
-    <a href="https://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Special</a>
+    <a href="https://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">All</a>
     <br>
-
+    <a href="worknest://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">OfficeCapital</a>
+    <br>
 </body>
 </html>
