--- a/index.html
+++ b/index.html
@@ -34,5 +34,27 @@
     <br>
     <a href="worknest://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">OfficeCapital</a>
     <br>
+        <a href="treasure://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Treasure</a>
+    <br>
+    <a href="portfolio://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Portfolio</a>
+    <br>
+        <a href="tropicaltime://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Tropical Time (T-Time)</a>
+    <br>
+    <a href="yourstrategy://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Твоя Стратегия</a>
+    <br>
+        <a href="sweatassets://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">SweatAssets</a>
+    <br>
+    <a href="beanvest://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Beanvest</a>
+    <br>
+        <a href="cozynest://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">CozyNest</a>
+    <br>
+    <a href="knightsmove://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">Шах и Мат</a>
+    <br>
+        <a href="geargo://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">GearGo</a>
+    <br>
+    <a href="tastetable://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">TasteTable</a>
+    <br>
+        <a href="youryard://www.tbank.ru/invest/projects?projectId=tournament" class="yellow-button">YourYard</a>
+    <br>
 </body>
 </html>
