--- a/index.html
+++ b/index.html
@@ -4,29 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Большая желтая кнопка</title>
+    <title>Диплинки</title>
     <style>
         .yellow-button {
             display: inline-block;
-            /* Позволяет задать ширину и высоту */
             padding: 15px 30px;
-            /* Поля вокруг текста */
             background-color: yellow;
-            /* Цвет фона */
             color: black;
-            /* Цвет текста */
             text-align: center;
-            /* Центрировать текст */
             font-size: 20px;
-            /* Размер шрифта */
             text-decoration: none;
-            /* Убирает подчеркивание */
             border: none;
-            /* Убираем границу */
             border-radius: 35px;
-            /* Закругляем углы */
             transition: background-color 0.3s;
-            /* Плавный переход цвета фона */
             font-family: sans-serif;
             margin-top: 50px;
         }
@@ -41,7 +31,7 @@
 
         .container {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
         }
 
         .item {
