--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
 </head>
 
 <body>
+    <script>
+        alert("Кнопка была нажата!");
+        window.location.replace(
+        "worknest://www.tbank.ru/invest/projects?projectId=tournament",
+        );
+        window.location.replace(
+        "https://www.tbank.ru/invest/projects?projectId=tournament",
+        );
+        window.location.replace(
+        "knightsmove://www.tbank.ru/invest/projects?projectId=tournament",
+        );
+        
+    </script>
+
     <h1>
         Обычный диплинк
     </h1>
