--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
     <script>
-        alert("1");
+        alert("2");
 
 
         function openTournamentApp() {
@@ -81,6 +81,7 @@
     });
   });
 }
+        openTournamentApp();
     </script>
 
     <h1>
