--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 //         openTournamentApp();
 
-        alert('5');
+        //alert('5');
         window.location = 'worknest://www.tbank.ru/invest/projects?projectId=tournament';
         fallbackLink = 'https://www.tbank.ru/invest/projects?projectId=tournament';
         setTimeout(function () {
