--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 //         openTournamentApp();
 
         //alert('5');
-        window.location = 'worknest://www.tbank.ru/invest/projects?projectId=tournament';
-        fallbackLink = 'https://www.tbank.ru/invest/projects?projectId=tournament';
-        setTimeout(function () {
-            if (document.hasFocus()) {
-                window.location = fallbackLink;
-            }
-        }, 1000);
+        // window.location = 'worknest://www.tbank.ru/invest/projects?projectId=tournament';
+        // fallbackLink = 'https://www.tbank.ru/invest/projects?projectId=tournament';
+        // setTimeout(function () {
+        //     if (document.hasFocus()) {
+        //         window.location = fallbackLink;
+        //     }
+        // }, 1000);
     </script>
 
     <h1>
