--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
                                                  
     <br> 
 
+        <br>
+   <a href="tcsgames://action/deeplink?deeplink=tinkoffbank://Main/Deposit" class="yellow-button">Mobile Bank</a>
+                                                 
+    <br> 
+
 </body>
 
 </html>
