--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
                                                  
     <br> 
 
+            <br>
+   <a href="tcsgames://action/deeplink?deeplink=tinkoffbank://Main" class="yellow-button">Mobile Bank 2</a>
+                                                 
+    <br> 
+
 </body>
 
 </html>
